syntax = "proto3";

import "api/common.proto";
package api_service_marketplace;

option go_package = "gitlab.ozon.dev/lvjonok/homework-3/pkg/service_marketplace/api";

message CreateProductRequest {
  string Name = 1;
  string Desc = 2;
};

message CreateProductResponse { uint64 ID = 1; };

message GetProductRequest { uint64 ID = 1; };

message GetProductResponse {
  uint64 ID = 1;
  string Name = 2;
  string Desc = 3;
};

message AddReviewRequest {
  uint64 ProductID = 1;
  string Text = 2;
};

message AddReviewResponse { uint64 ID = 1; };

message GetReviewsRequest { uint64 ProductID = 1; };

message Review {
  uint64 ID = 1;
  uint64 ProductID = 2;
  string Text = 3;
};

message GetReviewsResponse { repeated Review Reviews = 1; };

message UpdateCartRequest {
  uint64 ID = 1;
  repeated common.ProductUnit Products = 2;
};

message UpdateCartResponse { uint64 ID = 1; };

message GetCartRequest { uint64 ID = 1; };

message GetCartResponse {
  uint64 ID = 1;
  repeated common.ProductUnit Products = 2;
};

service Marketplace {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc AddReview(AddReviewRequest) returns (AddReviewResponse);
  rpc GetReviews(GetReviewsRequest) returns (GetReviewsResponse);
  rpc UpdateCart(UpdateCartRequest) returns (UpdateCartResponse);
  rpc GetCart(GetCartRequest) returns (GetCartResponse);
};